--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
   background: black;
   color: rgb(221, 221, 221);
 }
+.signup-form {
+  background: rgba(0, 0, 0, 0.8);
+  color: rgb(221, 221, 221);
+}
